--- a/suricata.yaml
+++ b/suricata.yaml
@@ -16,7 +16,7 @@ vars:
     #HOME_NET: "[192.168.0.0/16]"
     #HOME_NET: "[10.0.0.0/8]"
     #HOME_NET: "[172.16.0.0/12]"
-    HOME_NET: "any"
+    # HOME_NET: "any"
 
     EXTERNAL_NET: "!$HOME_NET"
     # EXTERNAL_NET: "any"
